--- a/index.html
+++ b/index.html
@@ -5,11 +5,330 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project</title>
+    <title>Portfolio | Slider</title>
 </head>
 
 <body>
-    start
+    <!-- header -->
+    <header>
+        <div class="logo">Creative</div>
+        <nav>
+            <a href="">Home</a>
+            <a href="">Contact</a>
+            <a href="">Info</a>
+        </nav>
+    </header>
+
+    <!-- carousel -->
+    <div class="carousel">
+        <div class="list">
+            <div class="item">
+                <img src="./assets/images/img1.png" alt="item">
+                <div class="intro">
+                    <div class="title">DESIGN SLIDER</div>
+                    <div class="topic">Aerphone</div>
+                    <div class="desc">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Quas ab fugit reprehenderit at, labore aut, quidem laborum
+                        libero eius earum omnis, mollitia rem id voluptatem.
+                    </div>
+                    <button class="seeMore">See More &#8599;</button>
+                </div>
+                <div class="detail">
+                    <div class="title">Aerphone LD</div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Officia suscipit nihil dolorem quia aperiam eligendi similique.
+                        Quasi in veritatis saepe iure ducimus ipsum ut temporibus
+                        tempore fugit sunt similique quia, excepturi corrupti numquam
+                        minima dolorum accusantium ea nihil et. Inventore nemo ab harum
+                        nulla quas facere corporis alias iste eos.
+                    </div>
+                    <div class="specifications">
+                        <div>
+                            <p>Used time</p>
+                            <p>6 hours</p>
+                        </div>
+                        <div>
+                            <p>Charging port</p>
+                            <p>Type-C</p>
+                        </div>
+                        <div>
+                            <p>Compatible</p>
+                            <p>Android</p>
+                        </div>
+                        <div>
+                            <p>Bluetooth</p>
+                            <p>5.3</p>
+                        </div>
+                        <div>
+                            <p>Controlled</p>
+                            <p>touch</p>
+                        </div>
+                    </div>
+                    <div class="checkout">
+                        <button>ADD TO CART</button>
+                        <button>CHECKOUT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/img2.png" alt="item">
+                <div class="intro">
+                    <div class="title">DESIGN SLIDER</div>
+                    <div class="topic">Aerphone</div>
+                    <div class="desc">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Quas ab fugit reprehenderit at, labore aut, quidem laborum
+                        libero eius earum omnis, mollitia rem id voluptatem.
+                    </div>
+                    <button class="seeMore">See More &#8599;</button>
+                </div>
+                <div class="detail">
+                    <div class="title">Aerphone LD</div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Officia suscipit nihil dolorem quia aperiam eligendi similique.
+                        Quasi in veritatis saepe iure ducimus ipsum ut temporibus
+                        tempore fugit sunt similique quia, excepturi corrupti numquam
+                        minima dolorum accusantium ea nihil et. Inventore nemo ab harum
+                        nulla quas facere corporis alias iste eos.
+                    </div>
+                    <div class="specifications">
+                        <div>
+                            <p>Used time</p>
+                            <p>6 hours</p>
+                        </div>
+                        <div>
+                            <p>Charging port</p>
+                            <p>Type-C</p>
+                        </div>
+                        <div>
+                            <p>Compatible</p>
+                            <p>Android</p>
+                        </div>
+                        <div>
+                            <p>Bluetooth</p>
+                            <p>5.3</p>
+                        </div>
+                        <div>
+                            <p>Controlled</p>
+                            <p>touch</p>
+                        </div>
+                    </div>
+                    <div class="checkout">
+                        <button>ADD TO CART</button>
+                        <button>CHECKOUT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/img3.png" alt="item">
+                <div class="intro">
+                    <div class="title">DESIGN SLIDER</div>
+                    <div class="topic">Aerphone</div>
+                    <div class="desc">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Quas ab fugit reprehenderit at, labore aut, quidem laborum
+                        libero eius earum omnis, mollitia rem id voluptatem.
+                    </div>
+                    <button class="seeMore">See More &#8599;</button>
+                </div>
+                <div class="detail">
+                    <div class="title">Aerphone LD</div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Officia suscipit nihil dolorem quia aperiam eligendi similique.
+                        Quasi in veritatis saepe iure ducimus ipsum ut temporibus
+                        tempore fugit sunt similique quia, excepturi corrupti numquam
+                        minima dolorum accusantium ea nihil et. Inventore nemo ab harum
+                        nulla quas facere corporis alias iste eos.
+                    </div>
+                    <div class="specifications">
+                        <div>
+                            <p>Used time</p>
+                            <p>6 hours</p>
+                        </div>
+                        <div>
+                            <p>Charging port</p>
+                            <p>Type-C</p>
+                        </div>
+                        <div>
+                            <p>Compatible</p>
+                            <p>Android</p>
+                        </div>
+                        <div>
+                            <p>Bluetooth</p>
+                            <p>5.3</p>
+                        </div>
+                        <div>
+                            <p>Controlled</p>
+                            <p>touch</p>
+                        </div>
+                    </div>
+                    <div class="checkout">
+                        <button>ADD TO CART</button>
+                        <button>CHECKOUT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/img4.png" alt="item">
+                <div class="intro">
+                    <div class="title">DESIGN SLIDER</div>
+                    <div class="topic">Aerphone</div>
+                    <div class="desc">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Quas ab fugit reprehenderit at, labore aut, quidem laborum
+                        libero eius earum omnis, mollitia rem id voluptatem.
+                    </div>
+                    <button class="seeMore">See More &#8599;</button>
+                </div>
+                <div class="detail">
+                    <div class="title">Aerphone LD</div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Officia suscipit nihil dolorem quia aperiam eligendi similique.
+                        Quasi in veritatis saepe iure ducimus ipsum ut temporibus
+                        tempore fugit sunt similique quia, excepturi corrupti numquam
+                        minima dolorum accusantium ea nihil et. Inventore nemo ab harum
+                        nulla quas facere corporis alias iste eos.
+                    </div>
+                    <div class="specifications">
+                        <div>
+                            <p>Used time</p>
+                            <p>6 hours</p>
+                        </div>
+                        <div>
+                            <p>Charging port</p>
+                            <p>Type-C</p>
+                        </div>
+                        <div>
+                            <p>Compatible</p>
+                            <p>Android</p>
+                        </div>
+                        <div>
+                            <p>Bluetooth</p>
+                            <p>5.3</p>
+                        </div>
+                        <div>
+                            <p>Controlled</p>
+                            <p>touch</p>
+                        </div>
+                    </div>
+                    <div class="checkout">
+                        <button>ADD TO CART</button>
+                        <button>CHECKOUT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/img5.png" alt="item">
+                <div class="intro">
+                    <div class="title">DESIGN SLIDER</div>
+                    <div class="topic">Aerphone</div>
+                    <div class="desc">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Quas ab fugit reprehenderit at, labore aut, quidem laborum
+                        libero eius earum omnis, mollitia rem id voluptatem.
+                    </div>
+                    <button class="seeMore">See More &#8599;</button>
+                </div>
+                <div class="detail">
+                    <div class="title">Aerphone LD</div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Officia suscipit nihil dolorem quia aperiam eligendi similique.
+                        Quasi in veritatis saepe iure ducimus ipsum ut temporibus
+                        tempore fugit sunt similique quia, excepturi corrupti numquam
+                        minima dolorum accusantium ea nihil et. Inventore nemo ab harum
+                        nulla quas facere corporis alias iste eos.
+                    </div>
+                    <div class="specifications">
+                        <div>
+                            <p>Used time</p>
+                            <p>6 hours</p>
+                        </div>
+                        <div>
+                            <p>Charging port</p>
+                            <p>Type-C</p>
+                        </div>
+                        <div>
+                            <p>Compatible</p>
+                            <p>Android</p>
+                        </div>
+                        <div>
+                            <p>Bluetooth</p>
+                            <p>5.3</p>
+                        </div>
+                        <div>
+                            <p>Controlled</p>
+                            <p>touch</p>
+                        </div>
+                    </div>
+                    <div class="checkout">
+                        <button>ADD TO CART</button>
+                        <button>CHECKOUT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/img6.png" alt="item">
+                <div class="intro">
+                    <div class="title">DESIGN SLIDER</div>
+                    <div class="topic">Aerphone</div>
+                    <div class="desc">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Quas ab fugit reprehenderit at, labore aut, quidem laborum
+                        libero eius earum omnis, mollitia rem id voluptatem.
+                    </div>
+                    <button class="seeMore">See More &#8599;</button>
+                </div>
+                <div class="detail">
+                    <div class="title">Aerphone LD</div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Officia suscipit nihil dolorem quia aperiam eligendi similique.
+                        Quasi in veritatis saepe iure ducimus ipsum ut temporibus
+                        tempore fugit sunt similique quia, excepturi corrupti numquam
+                        minima dolorum accusantium ea nihil et. Inventore nemo ab harum
+                        nulla quas facere corporis alias iste eos.
+                    </div>
+                    <div class="specifications">
+                        <div>
+                            <p>Used time</p>
+                            <p>6 hours</p>
+                        </div>
+                        <div>
+                            <p>Charging port</p>
+                            <p>Type-C</p>
+                        </div>
+                        <div>
+                            <p>Compatible</p>
+                            <p>Android</p>
+                        </div>
+                        <div>
+                            <p>Bluetooth</p>
+                            <p>5.3</p>
+                        </div>
+                        <div>
+                            <p>Controlled</p>
+                            <p>touch</p>
+                        </div>
+                    </div>
+                    <div class="checkout">
+                        <button>ADD TO CART</button>
+                        <button>CHECKOUT</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="arrows">
+            <button id="prev">&#60;</button>
+            <button id="back">Go Back &#8599;</button>
+            <button id="next">&#62;</button>
+        </div>
+    </div>
 
     <script src="./assets/js/main.js"></script>
 </body>
